--- a/src/Aazhi.css
+++ b/src/Aazhi.css
@@ -326,6 +326,7 @@ body {
     cursor: pointer;
     border-radius: 10px;
     width: 100%;
+    height: 100%;
     transition: all 0.2s;
     background-color: rgba(196, 249, 213, 0.546);
     box-shadow: 5px 5px 5px 5px #e5e5e5;
@@ -546,7 +547,7 @@ body {
       list-style: none;
       padding: 0;
       text-align: center;
-      margin: 0;
+      margin: 10%;
       padding-top: 10rem;
       transform: translateX(-100%);
     }
